--- a/nightlife/client/package.json
+++ b/nightlife/client/package.json
@@ -1,11 +1,22 @@
 {
-  "name": "nightlife",
+  "name": "city-night",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.70.0"
+  },
+  "devDependencies": {
+    "react-scripts": "1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
